# Bank-Marketing-ML-Pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  main.py  mlflow.db  pyproject.toml
.github/workflows/: docker-build-push.yml
artifacts/data/: X_test.csv  encoders.pkl  scaler.pkl
artifacts/predictions/: predictions.csv
dags/: bank_marketing_dag.py
mlruns/0/models/m-eff77060aaf04bf7a05f4902d419f045/artifacts/: MLmodel  conda.yaml  python_env.yaml
mlruns/1/models/m-e0e7dab3dba24ba5a07304fb98253d82/artifacts/: MLmodel  requirements.txt
notebooks/: 01_EDA.ipynb
pipelines/: data_pipeline.py  inference_pipeline.py  training_pipeline.py
src/: __init__.py  data_ingestion.py  data_splitter.py  feature_encoding.py  feature_scaling.py  gcs_utils.py  handle_missing_values.py  mlflow_utils.py  model_building.py  model_evaluation.py  model_inference.py  model_training.py  outlier_detection.py
