[project]
name = "bank-marketing"
version = "0.1.0"
description = "Production-grade Machine Learning pipeline for Bank Marketing Dataset"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "mlflow>=2.0.0",
    "gcsfs>=2023.6.0",
    "google-cloud-storage>=2.10.0"
]
